home vs auth.login

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarContenu">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('auth.login') }}">Connexion</a>
+          <a class="nav-link" href="{{ url_for('home') }}">Connexion</a>
         </li>
       </ul>
     </div>
